fix dark mode & plein ecran

--- a/sources/assets/style/horloge.css
+++ b/sources/assets/style/horloge.css
@@ -15,37 +15,41 @@
     display: inline-block;
     transition: background-color 0.6s ease;
 }
+
 .active, .dot:hover {
     background-color: #717171;
 }
+
 .fade {
     animation-name: fade;
     animation-duration: 1.5s;
 }
 
 @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
 
-#horloge_B{
+#horloge_B {
     text-align: center;
-    color:white;
-    font-size:40px;
+    color: white;
+    font-size: 40px;
     padding: 50px;
     background-color: #ffd54f;
 }
 
-.slideshow-container #time
-{
+.slideshow-container #time {
     text-align: center;
-    color:white;
-    font-size:40px;
+    color: white;
+    font-size: 40px;
     padding: 50px;
 }
 
-#presenter
-{
+#presenter {
     color: white;
     font-size: 17px;
     visibility: hidden;
@@ -53,7 +57,7 @@
 
 .btn-chrono {
     text-align: center;
-    color:black;
+    color: black;
     border: none;
     cursor: pointer;
     font-size: 25px;
@@ -62,11 +66,12 @@
     padding-left: 50px;
     border-radius: 10px;
 }
+
 .btn-chrono:hover {
     background-color: lavenderblush;
 }
 
-#timer{
+#timer {
     font-weight: 700;
     color: white;
     display: inline-block;
@@ -74,7 +79,8 @@
     padding: 1em;
     text-transform: uppercase;
 }
-#nombresec{
+
+#nombresec {
     width: 100px;
     height: 1.5em;
     text-align: center;
@@ -85,7 +91,8 @@
     font-weight: bold;
     color: black;
 }
-.btn-timer{
+
+.btn-timer {
     font-size: 25px;
     text-align: center;
     background-color: green;
@@ -96,16 +103,19 @@
     border-radius: 10px;
     border-width: 0;
 }
-.btn-timer:hover{
+
+.btn-timer:hover {
     background-color: white;
     color: green;
 }
-.numbers_div{
+
+.numbers_div {
     width: 100%;
     display: flex;
     justify-content: center;
 }
-.numbers{
+
+.numbers {
     margin: 10px;
     padding: 50px;
     background-color: white;
@@ -114,12 +124,14 @@
     font-weight: bold;
     color: black;
 }
-.deux-point{
+
+.deux-point {
     display: flex;
     align-items: center;
     color: black;
 }
-.header_horloge{
+
+.header_horloge {
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -128,11 +140,13 @@
     padding: 10px;
     margin-left: -50px;
 }
-.label_horloge{
+
+.label_horloge {
     font-size: 15px;
     color: #333333;
 }
-.stop_son{
+
+.stop_son {
     font-size: 25px;
     text-align: center;
     background-color: red;
